docs/website/static/css/custom.css
/* your custom css */
@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700');

html, body {
    font-family: 'Roboto', sans-serif;
}
.text-center {
    text-align: center;
}
.fixedHeaderContainer header>a {
    position: relative;
}
.fixedHeaderContainer header>a::after {
    content: '| Docs';
color: #fff;
font-size: 17px;
top: 50%;
display: block;
position: absolute;
width: 50px;
font-weight: 400;
left: 96%;
transform: translateY(-57%);
}
.projectTitle {
    font-size: 36px;
  font-weight: 300;
  text-align: center;
  color: #616161;
  margin-bottom: 50px;
}
.projectSubtexts {
    font-size: 20px;
  line-height: 1.55;
  text-align: center;
  color: #959595;
  max-width: 780px;
    margin: 0 auto;
margin-bottom: 20px;
}
.link-para {
    color: #2dd35c;
}
.link-para:hover, .link-para:focus {
    color: #1b983f;
    text-decoration: none;
}
.km-button-primary {
    border-radius: 4px;
  background-color: #2dd35c;
  min-width: 150px;
color: #FFF;
border-color: #2dd35c;
font-size: 16px;
  font-weight: 600;
  color: #f7f4f4;
transition: all 0.3s ease;
}
.km-button-primary:hover {
    border-radius: 4px;
  background-color: #2dd35c;
  min-width: 150px;
color: #FFF;
border-color: #2dd35c;
-webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
}

.docs-cards-container {
    padding: 50px;
    background-color: #ffffff;
}
.docs-cards {
    list-style: none;
    margin: 0;
    padding: 0;
    display: inline-flex;
    flex-direction: row;
    flex-wrap: wrap;
}
.docs-cards li{
    display: inline-block;
    width: 170px;
    height: 160px;
    margin-top: 20px;
    margin-bottom: 20px;
}
.cards-link {
    display: inline-block;
    width: 130px;
    border-radius: 4px;
  background-color: #ffffff;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
  padding: 40px 0px 15px;
transition: box-shadow .25s;  
}
.cards-link:hover {
    box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
  padding: 40px 0px 15px; 
}
.cards-link--web {
    border-top: 5px solid #4a90e2;
}
.cards-link--android {
    border-top: 5px solid #2dd35c;
}
.cards-link--ios {
    border-top: 5px solid #9b9b9b;
}
.cards-logo {
    margin-bottom: 20px;
}
.cards-title {
    font-size: 18px;
  font-weight: 500;
  line-height: 1.72;
  color: #b4b4b4;
}

/* .navGroup .navListItem:last-child,.navGroup .navListItem:nth-child(3) {
    display:none;
} */
.fixedHeaderContainer header h2 {
    display: none;
}
footer.nav-footer {
    background-color: #5c5aa7;
}
footer .sitemap {
    justify-content: space-evenly;
    border-bottom: 1px solid rgba(255,255,255,0.3);
    margin: 0 auto 1.5em;
    padding: 0px 15px;
}
footer .sitemap div {
    /* flex: 0; */
    /* width: 50%; */
}
footer .sitemap div .footer-pricing {
    width: 130px;
}
.kmLogoFooter {
    width: auto;
    height: 35px;
}
.km-address {
    flex: none !important;
    width: auto !important;
}
.km-address p {
    font-size: 14px;
  line-height: 1.83;
  color: #d9d9d9;
  /* padding-left: 10px; */
}
.col-lg-6 {
    width: 50%;
    display: flex;
    flex-wrap: wrap;
    justify-content: end;
}
.col-lg-6 div {
    margin-bottom: 30px;
    width: 30%;
}
.no-flex {
    display: block !important;
}
.homeContainer .homeWrapper {
    padding: 3em 10px;
}
.navPusher {
    height: auto;
} 
.km-address a {
    display: inline !important;
}

/* Seach box design */
input#search_input_react {
    color: #000;
    background-color: #FFF;
    width: 200px;
    height: 30px;
    border-radius: 4px;
}
input#search_input_react:focus, input#search_input_react:active {
    color: #000;
    width: 250px;
}
input#search_input_react::placeholder {
    color: #000;
}
input#search_input_react:-ms-input-placeholder {
    color: #000;
}
input#search_input_react::-ms-input-placeholder {
    color: #000;
}
.navSearchWrapper::before {
    border: 3px solid rgba(0, 0, 0, 0.5);
}
.navSearchWrapper::after {
    background: rgba(0, 0, 0, 0.5);
    left: 25px;
}
footer .copyright {
    max-width: 1080px;
    text-align: left;
    margin: 0 auto;
}



@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
}
@media only screen and (max-width:735px) {
    .reactNavSearchWrapper::after {
        left: 16px;
    }
    .reactNavSearchWrapper input#search_input_react {
        color: #000;
        background-color: #FFF;
        width: 130px;
        height: 30px;
        border-radius: 4px;
    }
    input#search_input_react:focus, input#search_input_react:active {
        background-color: #FFF;
        color: #000;
        width: 250px;
    }
    .reactNavSearchWrapper input#search_input_react:focus, .reactNavSearchWrapper input#search_input_react:active {
        background-color: #FFF;
        color: #fff;
        width: 130px;
    }
    .col-lg-6 {
        width: 100%;
        flex-direction: column;
    }
    footer .sitemap div {
        flex: none;
    }
}



@media only screen and (min-width: 1024px) {
}

@media only screen and (max-width: 1023px) {
}

@media only screen and (min-width: 1400px) {
}

@media only screen and (min-width: 1500px) {
}

